# services

./: Cargo.toml  build.rs  index.toml  todo.md
capability/: Cargo.toml  about.toml  manifest.toml
capability/src/: main.rs
compositor/: Cargo.toml  about.toml  manifest.toml
compositor/src/: main.rs
core/: Cargo.toml  build.rs
core.service/src/: entry.rs
core/src/: main.rs
display/: Cargo.toml  about.toml  build.rs  manifest.toml
display/src/: main.rs
driver.service/: manifest.toml
driver/src/: main.rs
drivers/: Cargo.toml  about.toml  manifest.toml
drivers/src/: lib.rs  main.rs
input/: Cargo.toml  about.toml  manifest.toml
input/src/: main.rs
logger/: Cargo.toml  about.toml  linker.ld  manifest.toml
logger/src/: main.rs
package/: Cargo.toml  about.toml  build.rs  manifest.toml
package/src/: main.rs
scripts/: qemu-runner.sh
shell.service/: manifest.toml
shell.service/src/: char.rs  entry.rs  keyboard.rs
signature/: Cargo.toml  about.toml  manifest.toml
signature/src/: main.rs
src/: app.rs  backend.rs  lib.rs
src/apps/Binder/src/: desktop.rs
src/apps/Binder/src/components/: window.html
src/apps/Dock/src/: main.rs
src/apps/Kagami/src/: compositor.rs  surface.rs
src/apps/Kagami/src/kagamid/: main.rs
src/apps/ViewKit/: Cargo.toml
src/apps/ViewKit/src/: app.rs  mochios.rs  vcomponent.rs  window.rs
src/boot/: loader.rs
src/core/: kernel.rs  smp.rs
src/core/src/syscall/: mod.rs  types.rs
src/core/syscall/: exec.rs  fs.rs  mod.rs  process.rs  types.rs
src/core/task/: elf.rs  mod.rs  scheduler.rs  thread.rs
src/services/core.service/src/: entry.rs
src/services/driver.service/src/: entry.rs
src/services/shell.service/src/: char.rs
tty/: Cargo.toml  about.toml  manifest.toml
tty/src/: main.rs
usb-driver/: Cargo.toml  about.toml
usb-driver/src/: lib.rs  main.rs
