[package]
name = "capability"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
mochi-user-platform = { path = "../../user/crates/platform" }
mochi-user-runtime = { path = "../../user/crates/runtime" }
mochi-user-syscall = { path = "../../user/crates/syscall" }
sha2 = { version = "0.10", default-features = false }

[build-dependencies]

[[bin]]
name = "capability"
path = "src/main.rs"
test = false
bench = false
harness = false
