[package]
name = "usb-driver"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
mochi-user-platform = { path = "../../user/crates/platform" }
mochi-user-runtime = { path = "../../user/crates/runtime" }
mochi-user-syscall = { path = "../../user/crates/syscall" }
plugkit = { git = "https://github.com/mochiOS/mnu", package = "plugkit" }

[build-dependencies]

[[bin]]
name = "entry"
path = "src/main.rs"
test = false
bench = false
harness = false
